--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div style="margin:auto;width:50px;">
-        <form action="http://localhost:3000/login" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
             <label for="username">Username:</label><br>
             <input name="username" id="username" type="text"><br>
             <label for="password">Password:</label><br>
@@ -15,8 +15,5 @@
             <input type="submit" value="Login">
         </form>
     </div>
-    <script>
-        console.log("Hello")
-    </script>
 </body>
 </html>
