--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,6 +20,7 @@
     <button type="button" onclick="topUp()">Top up</button>
     <h2 style="text-align: center;">Lịch sử vào ra</h2>
     <table class="HISTORY">
+        <th>ID</th>
         <th>Location</th>
         <th>Fee</th>
         <th>Time</th>
@@ -34,8 +35,9 @@
             document.getElementById("username").innerHTML = username
             document.getElementById("balance").innerHTML = balance
             var temp = ""
-            history.forEach(element => {
+            history.forEach((element, index) => {
                     temp += `<tr>
+                                <td>${index+1}</td>
                                 <td>${element.location}</td>
                                 <td>${element.fee}</td>
                                 <td>${element.time}</td>
