--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div style="margin:auto;width:50px;">
-        <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/user/login" method="post" enctype="application/x-www-form-urlencoded">
             <label for="username">Username:</label><br>
             <input name="username" id="username" type="text"><br>
             <label for="password">Password:</label><br>
