doi trang chu ve ./, them chuc nang dang ki

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,14 +7,13 @@
 </head>
 <body>
     <div style="margin:auto;width:50px;">
-        <form action="/auth/login" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/auth/signup" method="post" enctype="application/x-www-form-urlencoded">
             <label for="username">Username:</label><br>
             <input name="username" id="username" type="text"><br>
             <label for="password">Password:</label><br>
-            <input name="password" id="password" type="password"><br>
-            <input type="submit" value="Login">
+            <input name="password" id="password" type="text"><br>
+            <input type="submit" value="Sign up">
         </form>
     </div>
-    <a><a href="/auth/signup">Sign up here</a></a>
 </body>
 </html>
