--- a/views/signup_success.ejs
+++ b/views/signup_success.ejs
@@ -15,6 +15,8 @@
             <input type="submit" value="Login">
         </form>
     </div>
-    <a><a href="/auth/signup">Sign up here</a></a>
+    <script>
+        alert("Sign up successfully!")
+    </script>
 </body>
 </html>
