them chu Create new account vao UI

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,7 @@
     <title>Sign up</title>
 </head>
 <body>
+    <h1>Create new account</h1>
     <div style="margin:auto;width:50px;">
         <form action="/auth/signup" method="post" enctype="application/x-www-form-urlencoded">
             <label for="username">Username:</label><br>
