--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   div.signin
     div.center
+      div.login
         h3 LOGIN
         if hasErrors
           each mess in messages
@@ -16,4 +17,9 @@ block content
                 input(type="password" name="password" placeholder='password')
             button.btn(type='submit') Login
             p Don't Have An Account? 
-              a(href='/auth/signup') Register an account
+              a(href='/auth/signup') Register
+    div.messages
+      if messages
+        ul
+          for message in messages
+            li!= message.msg 
