--- a/views/home_style.css
+++ b/views/home_style.css
@@ -2,8 +2,19 @@ table, th, td {
     border-collapse: collapse;
     border:1px solid black;
     }
-    .HISTORY {
-        width: 30%;
-        margin-left: auto;
-        margin-right: auto;
-    } 
+.HISTORY {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+} 
+.btn{
+    justify-content: center;
+        cursor: pointer;
+        text-transform: uppercase;
+        padding: 10px;
+        color: #fff;
+        background: #4169E1;
+        border: none;
+        border-radius: 4px;
+        margin: 10px 0;
+    }
