--- a/views/signup.pug
+++ b/views/signup.pug
@@ -3,17 +3,21 @@ extends layout
 block content
   div.signin
     div.center
-        h3 SIGN UP
-        if hasErrors
-          each mess in messages
-            span.err= mess
-        form(action="/auth/signup" method="post")
-            div.field
-                div.label(for="username") Username
-                input(type="text" name="username" placeholder='username')
-            div.field
-                div.label(for="password") Password
-                input(type="password" name="password" placeholder='password')
-            button.btn(type='submit') Login
-            p Already have an account? 
-              a(href='/auth/login') Login here
+      h3 SIGN UP
+      if hasErrors
+        each mess in messages
+          span.err= mess
+      form(action="/auth/signup" method="post")
+          div.field
+              div.label(for="username") Username
+              input(type="text" name="username" placeholder='username')
+          div.field
+              div.label(for="password") Password
+              input(type="password" name="password" placeholder='password')
+          button.btn(type='submit') Login
+          p Already have an account? 
+            a(href='/auth/login') Login here
+      if messages
+        ul
+          for message in messages
+            li!= message.msg        
