--- a/views/home.pug
+++ b/views/home.pug
@@ -5,9 +5,9 @@ html
     style 
         include ./home_style.css
     body
-        h1(style="text-align: center") Hệ thống quản lí vào ra
+        h1(style="text-align: center") Check-in/Check-out system
         div
-            p Username: #{username}
+            p Name: #{fullName}
             p Balance: #{balance}
         button(type="button", onclick="topUp()").btn Top up
         div(style="float: right;")
