--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 doctype html
 head
-  title Login
+  title Home
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
@@ -13,7 +13,7 @@ section.ftco-section
         .login-wrap.p-4.p-md-5
           .icon.d-flex.align-items-center.justify-content-center
             span.fa.fa-user-o
-          block loginform
+          block form
           .messages
             if messages
               ul
