--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
   style
-    include ./new.css
+    include ./style.css
 section.ftco-section
   .container
     .row.justify-content-center
