--- a/views/login.pug
+++ b/views/login.pug
@@ -10,7 +10,7 @@ block form
       value=(password===undefine ? '' : password) required='')
     .form-group
       button.form-control.btn.btn-primary.rounded.submit.px-3(type='submit') Login
-    .form-group.d-flex
+    .form-group.d-flex(id="mess")
       .w-100 
         p Don't have an account yet?
       .w-50.text-md-right
