--- a/views/style.css
+++ b/views/style.css
@@ -29,7 +29,12 @@ body {
 }
 
 .ftco-section {
-  padding: 7em 0;
+  padding: 5em 0;
+}
+
+ul {
+  padding-left: 0%;
+  margin-top: 0%;
 }
 
 a {
@@ -222,4 +227,9 @@ p {
   } 
 .text-md-right {
   text-align: center;
-  }  
+}  
+
+#mess {
+  margin: 0;
+  height: min-content;
+}
