thu nho box size

--- a/views/register.pug
+++ b/views/register.pug
@@ -13,7 +13,7 @@ block form
       value=(password===undefine ? '' : password) required='')
     .form-group
       button.form-control.btn.btn-primary.rounded.submit.px-3(type='submit') Register
-    .form-group.d-md-flex
+    .form-group.d-md-flex(id="mess")
       .w-100
         p Already have an account?
       .w-50.text-md-right
