--- a/views/home_style.css
+++ b/views/home_style.css
@@ -9,12 +9,32 @@ table, th, td {
 } 
 .btn{
     justify-content: center;
-        cursor: pointer;
-        text-transform: uppercase;
-        padding: 10px;
-        color: #fff;
-        background: #4169E1;
-        border: none;
-        border-radius: 4px;
-        margin: 10px 0;
-    }
+    cursor: pointer;
+    text-transform: uppercase;
+    padding: 10px;
+    color: #fff;
+    background: #4169E1;
+    border: none;
+    border-radius: 4px;
+    margin: 10px 0;
+}
+
+.info {
+    margin-left: 5%;
+}
+
+.container {
+    display: flex;  
+}
+
+.btnlogout {
+    margin: 50% 50%;
+}
+
+.temp {
+    flex-grow: 1;
+}
+
+.form {
+    margin-right: 5%;
+}
