add admin, write

--- a/views/home.pug
+++ b/views/home.pug
@@ -15,7 +15,7 @@ html
             div(class="form")
                 form(action="/user/logout" method="get")
                     button(type='submit').btn.btnlogout Logout
-        table(class="HISTORY") 
+        table(class="table") 
             tr 
                 th ID
                 th Location 
