--- a/views/home_style.css
+++ b/views/home_style.css
@@ -2,7 +2,7 @@ table, th, td {
     border-collapse: collapse;
     border:1px solid black;
     }
-.HISTORY {
+.table {
     width: 30%;
     margin-left: auto;
     margin-right: auto;
