them chu nguoi dung chua lien ket the

--- a/views/admin_home.pug
+++ b/views/admin_home.pug
@@ -6,6 +6,7 @@ html
         include ./home_style.css
     body
         h1(style="text-align: center") Admin
+        h2(style="text-align: center") Người dùng chưa liên kết thẻ
         table(class="table") 
             tr 
                 th ID
