--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,9 +8,8 @@ head
     include ./style.css
 section.ftco-section
   .container
-    .row.justify-content-center
-      .col-md-7.col-lg-5
-        .login-wrap.p-4.p-md-5
+    .justify-content-center
+        .login-wrap.p-4
           .icon.d-flex.align-items-center.justify-content-center
             span.fa.fa-user-o
           block form
