--- a/views/style.css
+++ b/views/style.css
@@ -52,8 +52,6 @@ p {
       
 .container {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -71,51 +69,23 @@ p {
   .container {
   max-width: 1140px; }}
 
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
 .justify-content-center {
-  -webkit-box-pack: center !important;
-  -ms-flex-pack: center !important;
+  display: flex;
   justify-content: center !important;
 }
 
-.col-md-7, .col-lg-5 {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.col-md-7 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 58.33333%;
-  flex: 0 0 58.33333%;
-  max-width: 58.33333%;
-}
-
-.col-lg-5 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 41.66667%;
-  flex: 0 0 41.66667%;
-  max-width: 32.66667%;
-}
-
 .login-wrap {
+  width: 21rem;
+  padding: 1.5rem !important;
   position: relative;
   background: #fff;
   border-radius: 10px;
   -webkit-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24); }
-  pad
+  box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
+  
+}
+
 
 .login-wrap h3 {
   font-weight: 600;
@@ -137,14 +107,6 @@ p {
 
 .login-wrap .icon span {
   color: #fff;
-}
-
-.p-4 {
-  padding: 1.5rem !important;
-}
-
-.p-md-5 {
-  padding: 3rem rem 1rem !important;
 }
 
 .d-flex {
