--- a/views/home.pug
+++ b/views/home.pug
@@ -7,26 +7,27 @@ html
     body
         h1(style="text-align: center") Check-in/Check-out system
         div(class="container")
-            div(class="info")
-                p Name: #{fullName}
-                p Balance: #{balance}
-                button(type="button", onclick="topUp()").btn Top up
-            div(class="temp")
-            div(class="form")
-                form(action="/user/logout" method="get")
-                    button(type='submit').btn.btnlogout Logout
-        table(class="table") 
-            tr 
-                th ID
-                th Location 
-                th Time
-                th Fee  
-            each value, index in history
-                tr
-                    th #{index + 1}
-                    th #{value.location}
-                    th #{value.time}
-                    th #{value.fee}
+            div(class="info-wrap")
+                div(class="info")
+                    p Name: #{fullName}
+                    p Balance: #{balance}
+                    button(type="button", onclick="topUp()").btn Top up
+                div(class="temp")
+                div
+                    a(href="/user/logout")
+                            button(type='submit').btn.btnlogout Logout
+            table(class="table") 
+                tr 
+                    th ID
+                    th Location 
+                    th Time
+                    th Fee  
+                each value, index in history
+                    tr
+                        th #{index + 1}
+                        th #{value.location}
+                        th #{value.time}
+                        th #{value.fee}
 
     script(type='text/javascript').
         console.log("Hello world")
