--- a/views/home_style.css
+++ b/views/home_style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .container {
@@ -30,18 +30,18 @@ h1 {
     font-size: 35px;
     justify-content: center;
     cursor: pointer;
-    padding: 15px;
+    height: fit-content;
     text-transform: uppercase;
     color: #fff;
     background: #4169E1;
     border: none;
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin: 10px;
+    padding: 15px;
 }
 
 .info-wrap {
     display: flex;
-    margin-bottom: 30px;
 }
 
 .div-logout {
@@ -65,15 +65,25 @@ h1 {
     width: 30rem; }
     .btn {
         font-size: 20px;
+        padding: 10px;
     }
     body {
         font-size: 20px;
-    }
-    .btn {
-        padding: 10px;
     }
     .container {
         margin-left: 7rem;
         margin-right: 7rem;
     }
- }
+}
+
+.Topup {
+    display: flex;  
+}
+
+.Topup p {
+    text-align: right;
+    margin-right: 0rem;
+    flex-grow: 1;
+    color: darkblue;
+    font-weight: bold;
+}
