--- a/views/home.pug
+++ b/views/home.pug
@@ -21,7 +21,7 @@ html
             table(class="table") 
                 tr 
                     th ID
-                    th Direction 
+                    th In/Out 
                     th Time
                     th Fee  
                 each value, index in history
