--- a/views/home_style.css
+++ b/views/home_style.css
@@ -5,11 +5,15 @@ body {
 
 table, th, td {
     border-collapse: collapse;
+}
+
+.table th {
+    background-color: #27ae60;
     padding: 10px 20px;
 }
 
-th {
-    background-color: #27ae60;
+.table td {
+    padding: 10px 20px;
 }
 
 .row:nth-last-of-type(odd){
@@ -51,7 +55,7 @@ h1 {
     background: #4169E1;
     border: none;
     border-radius: 4px;
-    margin: 20px 0px;
+    margin: 10px 0px;
     padding: 15px;
 }
 
@@ -107,4 +111,43 @@ h1 {
     margin: 3px;
     padding: 2px 5px;
     text-transform: none;
+}
+
+.popup {
+    min-width: 730px;
+    text-align: left;
+    border-radius: 10px;
+    background: #d2d3d7;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    visibility: hidden;
+}
+
+.popup td {
+    color: red;
+}
+
+.popup .btn {
+    width: 100%;
+    padding: 5px 20px;
+    margin: 10px 0px 0px 0px;
+    
+}
+
+.content {
+    padding: 0 0 px 0;
+    text-align: left;
+}
+
+.content td {
+    font-weight: 1000;
+    padding: 10px 20px 10px 0px;
+}
+
+.content th {
+    padding-right: 40px;
+    padding: 10px 20px 10px 0px;
 }
